--- a/.gitignore
+++ b/.gitignore
@@ -23,3 +23,13 @@ dist/
 nbdist/
 .nb-gradle/
 .DS_Store
+
+.gradle/3.3/taskArtifacts/fileHashes.bin
+
+.gradle/3.3/taskArtifacts/fileSnapshots.bin
+
+.gradle/3.3/taskArtifacts/taskArtifacts.bin
+
+.gradle/3.3/taskArtifacts/taskArtifacts.lock
+
+gradlew.bat
